@@ -5,10 +5,12 @@ $(function(){
 			changeMonth: true,
 			changeYear: true
 	});
+	
 	$('.datepicker-input-clear').button();
 	
 	$('.datepicker-input-clear').click(function(){
 		$(this).parent().find('.datepicker-input').val("");
 		return false;
 	});
+	
 });
