@@ -58,7 +58,10 @@
 		<div class='buttons-box'>
 			<div class='form-button-box'>
 				<input type='submit' value='<?php echo $this->l('form_update_changes'); ?>' class='ui-input-button' />
-			</div>		
+			</div>
+			<div class='form-button-box'>
+				<input type='button' value='Update and go back to list' class='ui-input-button' id="save-and-go-back-button"/>
+			</div>			
 			<div class='form-button-box'>
 				<input type='button' value='<?php echo $this->l('form_cancel'); ?>' onclick='javascript: return goToList()' class='ui-input-button' />
 			</div>
