@@ -10,7 +10,15 @@ $(function(){
 				$(this).addClass('vsble');
 				$('#main-table-box').slideUp("slow");
 			}
-		});		
+		});
+		
+		var save_and_close = false;
+		
+		$('#save-and-go-back-button').click(function(){
+			save_and_close = true;
+			
+			$('#crudForm').trigger('submit');
+		});
 		
 		$('#crudForm').submit(function(){
 			$(this).ajaxSubmit({
@@ -35,6 +43,11 @@ $(function(){
 								data = $.parseJSON( result );
 								if(data.success)
 								{	
+									if(save_and_close)
+									{
+										window.location = list_url;
+										return true;
+									}									
 									$('#report-error').hide().html('');									
 									$('.field_error').each(function(){
 										$(this).removeClass('field_error');
