@@ -60,7 +60,10 @@
 		<div class="pDiv">
 			<div class='form-button-box'>
 				<input type='submit' value='<?php echo $this->l('form_save'); ?>'/>
-			</div>			
+			</div>
+			<div class='form-button-box'>
+				<input type='button' value='Save and go back to list' id="save-and-go-back-button"/>
+			</div>					
 			<div class='form-button-box'>
 				<input type='button' value='<?php echo $this->l('form_cancel'); ?>' onclick="javascript: goToList()" />
 			</div>
